fixed spacing of characteristics

--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -34,6 +34,15 @@
     margin-bottom: 15px;
 }
 
+.edit-field-title {
+    padding-left: 0.5vw;
+}
+
+.edit-field-body {
+    padding-left: 0.5vw;
+    margin-bottom: 0px;
+}
+
 // Preference Dropdown Styles
 .dropdown-pref {
     padding: 2px 8px;
